[package]
name = "mesagisto-center-cfworker"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.0.16"
serde = { version = "1.0.160", default-features = false }
ciborium = "0.2.0"
hex = "0.4.3"
futures-util = "0.3.28"

[profile.release]
lto = true
strip = true
codegen-units = 1
